# spaceconf

./: Cargo.toml  Containerfile  LICENSE  README.md
.github/: GitVersion.yml  changelog.json  renovate.json  renovate.json5
.github/workflows/: build.yml  check-label.yml  check-version.yml  release.yml  test.yml
scripts/: SetVersion.ps1  check_version.py  get_version.py
src/: fixture.rs  git.rs  lib.rs  main.rs  ops.rs  repo.rs  template.rs
src/ops/: apply.rs  diff.rs  load.rs
tests/: Containerfile  test.py
tests/fixtures/zsh/: fixture.toml  zprofile  zshrc
