[package]
name = "spaceconf"
version = "0.0.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
hostname = "0.4.0"
num_cpus = "1.16.0"
resolve-path = "0.1.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
sudo = "0.6.0"
tera = "1.19.1"
wsl = "0.1.0"

[dev-dependencies]
tempfile = "3.10.1"
