[package]
name = "spaceconf"
version = "0.0.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.3"
globset = "0.4.14"
hostname = "0.4.0"
log = "0.4.21"
num_cpus = "1.16.0"
resolve-path = "0.1.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tera = "1.19.1"
termcolor = "1.4.1"
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.10.1"
